Specify server for deployment until pull request is merged.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ after_success: coveralls
 deploy:
   provider: pypi
   user: eikonomega
+  server: http://pypi.python.org/pypi
   password:
     secure: g0qFyS/i4aRuSjKgNGJBZ3N/JqsBLOqA53yQZjA92Fl5t5eb8koJT3hTzhiB0tmkwNN8WxHXRaRiqkSvmKK4xwfN8SZ4w4CmxYKVkhZ13LdW6ebX7wFaFUpDWU1l9dlIRFzii0dwMGV7/DiQiGRsOH213ae9nyE58pwbv+vRF3w=
   on:
